# soul-bench

./: .gitignore  CLAUDE.md  LICENSE  README.md
.claude/: hookify.block-hardcoded-secrets.local.md  hookify.block-sql-concat.local.md  hookify.block-weak-password-hash.local.md  hookify.warn-cross-project-import.local.md  hookify.warn-direct-anthropic.local.md  hookify.warn-direct-send.local.md  hookify.warn-empty-except.local.md  hookify.warn-sync-in-async.local.md
claude-task-manager/: README.md
dashboard/: DASHBOARD_SPEC.md  build_dashboard_data.py  cars-data.ts
docs/: anthropic-roles-global.md  anthropic-roles.md  architecture.md  campaign-expansion.md  competencies.md  content-log.md  daily-planner.md  ecosystem-map.md  post-log.md  roadmap.md  strategy.md
drafts/: github-profile-readme-v2.md  github-profile-readme.md  linkedin-about.md  (+7 more)
soul-planner/: .gitignore  CLAUDE.md  Cargo.toml  README.md  pyproject.toml
soul-planner/.claude-plugin/: plugin.json
soul-planner/agents/: task-orchestrator.md  task-runner.md
soul-planner/commands/: planner-run-auto.md  planner-run.md  planner-schedule.md  planner.md  task-run.md  task-schedule.md  task.md
soul-planner/skills/task-awareness/: SKILL.md
soul-planner/soul_planner/: __init__.py  __main__.py  cli.py  db.py  models.py  runner.py  scheduler.py
soul-planner/src/: board.rs  db.rs  lib.rs  main.rs  models.rs  runner.rs  scheduler.rs
soul-planner/tests/: cli_tests.rs  db_tests.rs  model_tests.rs  runner_tests.rs  scheduler_tests.rs  test_cli.py  test_db.py  test_e2e.py  test_models.py  test_runner.py  test_scheduler.py
(+170 files in other folders)
