[package]
name = "soul-planner"
version = "0.1.0"
edition = "2021"
description = "Task queue and scheduler for Claude Code with Kanban workflow."
license = "Apache-2.0"
authors = ["Rishav"]

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tabled = "0.17"
regex = "1"
dirs = "6"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
