[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "soul-planner"
version = "0.1.0"
description = "Task queue and scheduler for Claude Code with Kanban workflow."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [{name = "Rishav"}]
keywords = ["claude-code", "planner", "task-queue", "kanban"]

dependencies = [
    "aiosqlite>=0.20.0",
    "aiofiles>=24.0.0",
    "structlog>=24.0.0",
    "click>=8.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.8.0",
]

[project.scripts]
soul-planner = "soul_planner.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["soul_planner*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
